# metadatos

./: DESCRIPTION.txt  README.md  README.txt  R_metadatos.json  R_txt_json.py  Tabla de Metadatos.csv  Tabla de metadatos entre distintos lenguajes de programacion (1).xlsx  Tabla de metadatos entre distintos lenguajes de programacion.csv  composer.json  equisml.xml  java_metadatos.json  json_a_json.py  php_json_json.py  php_metadatos.json  primer.json  setup.cfg
archivosJsonDevueltos/: EJEMPLO_metadatos.json  R_metadatos.json  css_metadatos.json  haskell_metadatos.json  java_metadatos.json  julia_metadatos.json  metadatos.json  php_metadatos.json  python_metadatos.json  rust_metadatos.json
codigos/: R_txt_json.py  css_json_json.py  haskell_cabal_json.py  java_xml_json.py  javascript_json_json.py  julia_toml_json.py  master.py  php_json_json.py  python_cfg_json.py  python_py_json.py  ruby_gemspec_json.py  rust_toml_json.py
pruebas/: metadata.json  metadata2.json  xml_a_json.py
test/: composer.json  master.py  php_json_json.py  test_1_css.py  test_1_haskell.py  test_1_javascript.py  test_1_julia.py  test_1_php.py  test_1_pyhon_cfg.py  test_1_pyhon_py.py  test_1_ruby.py  test_1_rust.py  test_1_txt.py
test/archivos/: Cargo.toml  DESCRIPTION.txt  Project.toml  nombre.gemspec  package2.json  pom.xml  setup.cfg  setup.py
test/test1_CSS/: css_json_json.py  css_metadatos.json  master.py  package.json
test/test1_HASKELL/: haskell_cabal_json.py  haskell_metadatos.json  master.py  nombre.cabal
test/test1_JAVA/: java_metadatos.json  java_xml_json.py  master.py  pom.xml
test/test1_JAVASCRIPT/: a.py  javascript_metadatos.json  master.py  package.json
test/test1_JULIA/: Project.toml  julia_metadatos.json
test/test1_PHP/: master.py  php_json_json.py  php_metadatos.json
test/test1_PYTHON/: master.py  python_cfg_metadatos.json  setup.cfg  setup.py
test/test1_R/: R_metadatos.json  R_txt_json.py  master.py
test/test1_RUBY/: gemfileparse.py  master.py  nombre.gemspec  ruby_gemspec_json.py  ruby_metadatos.json
test/test1_RUST/: Cargo.toml  java_xml_json.py  javascript_json_json.py  metadatos.json  python_cfg_json.py  python_py_json.py  rust_metadatos.json  rust_toml_json.py
test/test_Css/: css_json_json.py  test_1_css.py
test/test_Java/: java_xml_json.py  master.py  pom.xml  test_1_java.py
test/test_Php/: php_json_json.py  test_1_php.py
