[metadata]
author = Jose Alberto Cañibano Lopez
author_email = albertocanibano@hotmail.com
description = Con este trabajo el objetivo era poder unificar la manera en que, en diferentes proyectos en diferentes lenguajes se guardan los metadatos de dicho proyectos. El codigo parse cada una de las extensiones en donde los lenguajes los depositan y los va guardando en una lista que posteriormente exporta a un archivo JSON. Aqui es donde se podran ver todos los archivos de metadatos encontrados y su información. 
keywords = parse, php, javascript, java, ruby, rust, python, julia, metadata, metadatos, css, R, haskell
long_description = file: README.md
maintainer = Jose Alberto Cañibano Lopez
platforms = Windows, MacOS, Linux
maintainer_email = albertocanibano@hotmail.com
name = TFG -Trabajo de Fin De Grado
url = https://github.com/Lagu3rrA/metadatos
version = 0.0.4 