name:                unused
version:             0.10.0.0
synopsis:            A command line tool to identify unused code.
description:         Please see README.md
homepage:            https://github.com/joshuaclayton/unused#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2016-2018 Josh Clayton
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          data/config.yml

library
  hs-source-dirs:      src
  exposed-modules:     Unused.TermSearch
                     , Unused.TermSearch.Types
                     , Unused.TermSearch.Internal
                     , Unused.Parser

  build-depends:       base >= 4.7 && < 5
                     , process
                     , containers
                     , filepath
                     , directory
                     , regex-tdfa
                     , terminal-progress-bar >= 0.1.1.1 && < 0.1.2

  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable unused
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , unused
                     , optparse-applicative
                     , mtl
                     , transformers
  other-modules:       App
                     , Types
  default-language:    Haskell2010

test-suite unused-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , unused
                     , hspec
                     , containers
                     , text
  other-modules:       Unused.ParserSpec
                     , Unused.ResponseFilterSpec
                     , Unused.TypesSpec

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/unused